# GlueLLMPractice

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.cursor/rules/: persona.mdc  style_guide.mdc  testing.mdc
agents/: __init__.py  basic_research.py  directory_crawler.py  eodhd_stock_agent.py  poem_loop.py  rock_paper_scissors.py  sec_research.py
core/: __init__.py  base_agent.py  guardrails.py  logging_config.py  loop.py  workflow_wrappers.py
eval/: __init__.py  recording.py  run_eval_recording.py  scoring.py
eval/agents/: __init__.py  basic_research.py  directory_crawler.py  eodhd_stock_agent.py  poem_loop.py  rock_paper_scissors.py  sec_research.py
eval/data/basic_research/: queries.jsonl
eval/data/directory_crawler/: cases.jsonl
eval/data/eodhd_stock_agent/: cases.jsonl
eval/data/poem_loop/: topics.jsonl
eval/data/rock_paper_scissors/: move_validity.jsonl
eval/data/sec_research/: queries.jsonl
evals/: __init__.py  basic_research.json  directory_crawler.json  eodhd_stock_agent.json  poem_loop.json  rock_paper_scissors.json  run_eval_recording.py  runner.py  sec_research.json
tests/: test_agent_input_validation.py  test_agents.py  test_eval.py  test_guardrails.py  test_tools.py
tools/: __init__.py  edgar_tools.py  eodhd_tools.py  filesystem_tools.py  search_tools.py
