[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gluellm-interview"
version = "0.1.0"
description = "Hands-on assessment: agentic AI systems built with GlueLLM."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "gluellm>=1.1.0",
    "pydantic>=2.12.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "tools*"]
namespaces = false

