[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gluellm-interview"
version = "0.1.0"
description = "Hands-on assessment: agentic AI systems built with GlueLLM."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "gluellm>=1.1.0",
    "pydantic>=2.12.0",
    "httpx>=0.28.0",
    "colorlog>=6.9.0",
    "python-json-logger>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "tools*", "evals*"]
namespaces = false

[tool.ruff]
target-version = "py312"
line-length = 100
fix = false
show-fixes = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E501", # line length handled by formatter
  "UP046", # keep Generic[...] style for compatibility/readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B018"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
pretty = true

